# tmds-mcp

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: formatting.yml  packaging_test.yml  python-publish.yml  pythonlint.yml  unittests.yml
src/tmds_mcp/: DEBUGGING.md  server.py  settings.py
unittests/: .pylintrc  conftest.py  test_server.py  test_smoke.py
