[build-system]
requires = ["hatchling>=1.29.0", "hatch-vcs", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[project]
name = "tmds-mcp"
dynamic = ["readme", "version"]
description = "MCP server for the Technical Master Data Service (TMDS) — read-only debug tools"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Hochfrequenz Unternehmensberatung GmbH", email = "info+pip@hochfrequenz.de" }]
keywords = ["tmds", "technicalmasterdata", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "tmdsclient>=0.7.1",
    "fastmcp>=3.0",
    "pydantic-settings>=2.7",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
tests = [
    "pytest==9.0.3",
    "pytest-asyncio==1.4.0",
    "pytest-mock==3.15.1",
]
linting = [
    "pylint==4.0.6",
]
type_check = [
    "mypy==2.1.0",
]
spell_check = [
    "codespell==2.4.2",
]
coverage = [
    "coverage==7.15.2",
]
formatting = [
    "black==26.5.1",
    "isort==8.0.1",
]
packaging = [
    "build==1.5.0",
    "twine==6.2.0",
]
dev = [
    "pip-tools==7.6.0",
]

[project.scripts]
tmds-mcp = "tmds_mcp.server:main"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"
fragments = [{ path = "README.md" }]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/tmds_mcp_version.py"
template = '''
version = "{version}"
'''

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["unittests"]

[tool.black]
line-length = 120
target_version = ["py311", "py312", "py313", "py314"]

[tool.isort]
line_length = 120
profile = "black"

[tool.pylint."MESSAGES CONTROL"]
max-line-length = 120

[tool.mypy]
disable_error_code = []
